# lehome-challenge

./: README.md  pyproject.toml
configs/: train_act.yaml  train_dp.yaml  train_smolvla.yaml
docs/: datasets.md  docker_installation.md  installation.md  training.md
dummy_docker_policy/: Dockerfile  README.md  policy.py  server.py
scripts/: eval.py
scripts/eval_policy/: POLICY_GUIDE.md  __init__.py  base_policy.py  docker_policy.py  example_participant_policy.py  lerobot_policy.py  registry.py
scripts/utils/: dataset_record.py  dataset_replay.py  eval_utils.py  evaluation.py  evaluation_copy.py  parser.py  remove_depth_column.py
source/lehome/lehome/assets/object/: Garment.py  utils.py
source/lehome/lehome/devices/: __init__.py  action_process.py
source/lehome/lehome/devices/gamepad/: __init__.py  bi_gamepad.py
source/lehome/lehome/devices/keyboard/: bi_keyboard.py
source/lehome/lehome/tasks/bedroom/: challenge_garment_loader.py  garment_bi_cfg_v2.py  garment_bi_v2.py
source/lehome/lehome/utils/: bimanual_ik_solver.py  env_utils.py
