[project]
name = "lehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "isaacsim[all,extscache]==5.1.0",
    "lerobot==0.4.2",
    "open3d>=0.19.0",
    "pinocchio>=0.4.3",
    "pip>=25.3",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "transforms3d>=0.4.2",
]
[tool.uv]
override-dependencies = [
    "packaging==23.0",
    "numpy==1.26.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
