[project]
name = "lehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "isaacsim[all,extscache]==5.1.0",
    "lerobot==0.4.3",
    "num2words>=0.5.14",
    "open3d>=0.19.0",
    "pinocchio>=0.4.3",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "transformers>=4.57.6",
    "transforms3d>=0.4.2",
]
[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "packaging==23.0",
    "numpy==1.26.0",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

